--- a/index.html
+++ b/index.html
@@ -7,85 +7,60 @@
   <title>I Must Do</title>
   <link rel="stylesheet" href="style.css">
 </head>
-<body>
+  <body>
 
-  <main class="main">
+    <main class="main">
 
-    <div class="todo">
-      <div class="todo__header">
-        <h2 class="todo-header__title">I Must Do</h2>
+      <div class="todo">
+        <div class="todo__header">
+          <h2 class="todo-header__title">I Must Do</h2>
 
-        <div class="todo-header__buttons">
-          <button class="button button--add" id="add-button">
-            <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewbox="0 0 24 24" fill="none" stroke="#207934" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><line x1="12" y1="5" x2="12" y2="19"></line><line x1="5" y1="12" x2="19" y2="12"></line></svg>
-          </button>
-
-          <button class="button button--clear-all" id="clear-all-button">
-            <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewbox="0 0 24 24">
-              <path fill-rule="evenodd" stroke-width="0" fill="#792020" d="M7,4 L7,3 C7,1.8954305 7.8954305,1 9,1 L15,1 C16.1045695,1 17,1.8954305 17,3 L17,4 L20,4 C21.1045695,4 22,4.8954305 22,6 L22,8 C22,9.1045695 21.1045695,10 20,10 L19.9198662,10 L19,21 C19,22.1045695 18.1045695,23 17,23 L7,23 C5.8954305,23 5,22.1045695 5.00345424,21.0830455 L4.07986712,10 L4,10 C2.8954305,10 2,9.1045695 2,8 L2,6 C2,4.8954305 2.8954305,4 4,4 L7,4 Z M7,6 L4,6 L4,8 L20,8 L20,6 L17,6 L7,6 Z M6.08648886,10 L7,21 L17,21 L17.0034542,20.9169545 L17.9132005,10 L6.08648886,10 Z M15,4 L15,3 L9,3 L9,4 L15,4 Z"/>
-            </svg>
-          </button>
-        </div>
-      </div>
-
-      <div class="todo__add-form">
-
-        <input class="add-form__input input--name" type="text" id="inputName" placeholder="Название *">
-
-        <input class="add-form__input input--description" type="text" id="inputDescription" placeholder="Описание">
-
-        <input class="add-form__input input--datetime" type="datetime-local" id="inputDatetime" placeholder="Дата и время">
-
-        <div class="add-form__buttons">
-          <button class="button button--cancel-item" id="cancelItemBtn">
-            <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-              width="22px" height="22px" fill="#792020" viewbox="0 0 92 92" enable-background="new 0 0 92 92" xml:space="preserve">
-            <path id="XMLID_546_" d="M84,46c0,2.2-1.8,4-4,4H21.6l18.1,18.2c1.6,1.6,1.6,4.1,0,5.7C39,74.6,38,75,36.9,75c-1,0-2.1-0.4-2.8-1.2
-              l-24.9-25c-1.6-1.6-1.6-4.1,0-5.6l24.9-25c1.6-1.6,4.1-1.6,5.7,0c1.6,1.6,1.6,4.1,0,5.7L21.6,42H80C82.2,42,84,43.8,84,46z"/>
-            </svg>
-          </button>
-
-          <button class="button button--enter-item" id="enterItemBtn">
-            <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-              width="22px" height="22px" viewbox="0 0 92 92" enable-background="new 0 0 92 92" xml:space="preserve">
-            <path id="XMLID_512_" fill="#207934" d="M82.8,48.8l-24.9,25c-0.8,0.8-1.8,1.2-2.8,1.2c-1,0-2-0.4-2.8-1.2c-1.6-1.6-1.6-4.1,0-5.7L70.4,50H12
-              c-2.2,0-4-1.8-4-4c0-2.2,1.8-4,4-4h58.4L52.2,23.8c-1.6-1.6-1.6-4.1,0-5.7c1.6-1.6,4.1-1.6,5.7,0l24.9,25
-              C84.4,44.7,84.4,47.3,82.8,48.8z"/>
-            </svg>
-          </button>
-        </div>
-      </div>
-
-      <ul class="todo__list">
-        <li class="todo__item">
-          <div class="checkbox">
-            <input class="checkbox__input" type="checkbox" id="check-1" checked>
-            <label class="checkbox__label" for="check-1"></label>
-          </div>
-
-          <div class="item__name">Название задачи</div>
-          <div class="item__description">Описание задачи</div>
-          <div class="item__datetime">16.01.2022 - 21:55</div>
-
-          <div class="item__buttons">
-            <button class="button button--edit">
-              <svg xmlns="http://www.w3.org/2000/svg" viewbox="0 0 48 48" width="20" height="20" fill="#ccc">
-                <path d="M 36 5.0097656 C 34.205301 5.0097656 32.410791 5.6901377 31.050781 7.0507812 L 8.9160156 29.183594 C 8.4960384 29.603571 8.1884588 30.12585 8.0253906 30.699219 L 5.0585938 41.087891 A 1.50015 1.50015 0 0 0 6.9121094 42.941406 L 17.302734 39.974609 A 1.50015 1.50015 0 0 0 17.304688 39.972656 C 17.874212 39.808939 18.39521 39.50518 18.816406 39.083984 L 40.949219 16.949219 C 43.670344 14.228094 43.670344 9.7719064 40.949219 7.0507812 C 39.589209 5.6901377 37.794699 5.0097656 36 5.0097656 z M 36 7.9921875 C 37.020801 7.9921875 38.040182 8.3855186 38.826172 9.171875 A 1.50015 1.50015 0 0 0 38.828125 9.171875 C 40.403 10.74675 40.403 13.25325 38.828125 14.828125 L 36.888672 16.767578 L 31.232422 11.111328 L 33.171875 9.171875 C 33.957865 8.3855186 34.979199 7.9921875 36 7.9921875 z M 29.111328 13.232422 L 34.767578 18.888672 L 16.693359 36.962891 C 16.634729 37.021121 16.560472 37.065723 16.476562 37.089844 L 8.6835938 39.316406 L 10.910156 31.521484 A 1.50015 1.50015 0 0 0 10.910156 31.519531 C 10.933086 31.438901 10.975086 31.366709 11.037109 31.304688 L 29.111328 13.232422 z"/>
-              </svg>
+          <div class="todo-header__buttons">
+            <button class="button button--add" id="add-button">
+              <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewbox="0 0 24 24" fill="none" stroke="#207934" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><line x1="12" y1="5" x2="12" y2="19"></line><line x1="5" y1="12" x2="19" y2="12"></line></svg>
             </button>
-            <button class="button button--delete">
-              <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewbox="0 0 512 512" fill="#ccc">
-                <path d="M289.94,256l95-95A24,24,0,0,0,351,127l-95,95-95-95A24,24,0,0,0,127,161l95,95-95,95A24,24,0,1,0,161,385l95-95,95,95A24,24,0,0,0,385,351Z"/>
+
+            <button class="button button--clear-all" id="clear-all-button">
+              <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewbox="0 0 24 24">
+                <path fill-rule="evenodd" stroke-width="0" fill="#792020" d="M7,4 L7,3 C7,1.8954305 7.8954305,1 9,1 L15,1 C16.1045695,1 17,1.8954305 17,3 L17,4 L20,4 C21.1045695,4 22,4.8954305 22,6 L22,8 C22,9.1045695 21.1045695,10 20,10 L19.9198662,10 L19,21 C19,22.1045695 18.1045695,23 17,23 L7,23 C5.8954305,23 5,22.1045695 5.00345424,21.0830455 L4.07986712,10 L4,10 C2.8954305,10 2,9.1045695 2,8 L2,6 C2,4.8954305 2.8954305,4 4,4 L7,4 Z M7,6 L4,6 L4,8 L20,8 L20,6 L17,6 L7,6 Z M6.08648886,10 L7,21 L17,21 L17.0034542,20.9169545 L17.9132005,10 L6.08648886,10 Z M15,4 L15,3 L9,3 L9,4 L15,4 Z"/>
               </svg>
             </button>
           </div>
-        </li>
+        </div>
 
-      </ul>
-    </div>
+        <div class="todo__add-form">
 
-  </main>
+          <input class="add-form__input input--name" type="text" id="inputName" placeholder="Название *">
 
-  <script src="script.js"></script>
-</body>
+          <input class="add-form__input input--description" type="text" id="inputDescription" placeholder="Описание">
+
+          <input class="add-form__input input--datetime" type="datetime-local" id="inputDatetime" placeholder="Дата и время">
+
+          <div class="add-form__buttons">
+            <button class="button button--cancel-item" id="cancelItemBtn">
+              <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                width="22px" height="22px" fill="#792020" viewbox="0 0 92 92" enable-background="new 0 0 92 92" xml:space="preserve">
+              <path id="XMLID_546_" d="M84,46c0,2.2-1.8,4-4,4H21.6l18.1,18.2c1.6,1.6,1.6,4.1,0,5.7C39,74.6,38,75,36.9,75c-1,0-2.1-0.4-2.8-1.2
+                l-24.9-25c-1.6-1.6-1.6-4.1,0-5.6l24.9-25c1.6-1.6,4.1-1.6,5.7,0c1.6,1.6,1.6,4.1,0,5.7L21.6,42H80C82.2,42,84,43.8,84,46z"/>
+              </svg>
+            </button>
+
+            <button class="button button--enter-item" id="enterItemBtn">
+              <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                width="22px" height="22px" viewbox="0 0 92 92" enable-background="new 0 0 92 92" xml:space="preserve">
+              <path id="XMLID_512_" fill="#207934" d="M82.8,48.8l-24.9,25c-0.8,0.8-1.8,1.2-2.8,1.2c-1,0-2-0.4-2.8-1.2c-1.6-1.6-1.6-4.1,0-5.7L70.4,50H12
+                c-2.2,0-4-1.8-4-4c0-2.2,1.8-4,4-4h58.4L52.2,23.8c-1.6-1.6-1.6-4.1,0-5.7c1.6-1.6,4.1-1.6,5.7,0l24.9,25
+                C84.4,44.7,84.4,47.3,82.8,48.8z"/>
+              </svg>
+            </button>
+          </div>
+        </div>
+
+        <ul class="todo__list"></ul>
+      </div>
+
+    </main>
+
+    <script src="script.js"></script>
+  </body>
 </html>
