--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
 
         <div class="todo__create-form">
 
-          <input class="create-form__input input--name" type="text" id="inputName" placeholder="Название *">
+          <input class="create-form__input input--name" type="text" id="inputName" placeholder="Task Name *">
 
-          <input class="create-form__input input--description" type="text" id="inputDescription" placeholder="Описание">
+          <input class="create-form__input input--description" type="text" id="inputDescription" placeholder="Description">
 
-          <input class="create-form__input input--datetime" type="datetime-local" id="inputDatetime" placeholder="Дата и время">
+          <input class="create-form__input input--datetime" type="datetime-local" id="inputDatetime" placeholder="Date & Time">
 
           <div class="create-form__buttons">
             <button class="button button--cancel" id="cancelBtn">
@@ -44,6 +44,8 @@
                 l-24.9-25c-1.6-1.6-1.6-4.1,0-5.6l24.9-25c1.6-1.6,4.1-1.6,5.7,0c1.6,1.6,1.6,4.1,0,5.7L21.6,42H80C82.2,42,84,43.8,84,46z"/>
               </svg>
             </button>
+
+            <!-- <input type="color" name="" id=""> -->
 
             <button class="button button--enter" id="enterBtn">
               <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
