--- a/index.html
+++ b/index.html
@@ -1,68 +1,133 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>I Must Do</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-  <body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>I Must Do</title>
+		<link rel="stylesheet" href="style.css" />
+	</head>
+	<body>
+		<main class="main">
+			<div class="todo">
+				<div class="todo__header">
+					<h2 class="todo-header__title">I Must Do</h2>
 
-    <main class="main">
+					<div class="todo-header__buttons">
+						<button class="button button--add" id="addBtn">
+							<svg
+								xmlns="http://www.w3.org/2000/svg"
+								width="28"
+								height="28"
+								viewbox="0 0 24 24"
+								fill="none"
+								stroke="#207934"
+								stroke-width="2.5"
+								stroke-linecap="round"
+								stroke-linejoin="round"
+							>
+								<line x1="12" y1="5" x2="12" y2="19"></line>
+								<line x1="5" y1="12" x2="19" y2="12"></line>
+							</svg>
+						</button>
 
-      <div class="todo">
-        <div class="todo__header">
-          <h2 class="todo-header__title">I Must Do</h2>
+						<button class="button button--clear-all" id="clearAllBtn">
+							<svg
+								xmlns="http://www.w3.org/2000/svg"
+								width="22"
+								height="22"
+								viewbox="0 0 24 24"
+							>
+								<path
+									fill-rule="evenodd"
+									stroke-width="0"
+									fill="#792020"
+									d="M7,4 L7,3 C7,1.8954305 7.8954305,1 9,1 L15,1 C16.1045695,1 17,1.8954305 17,3 L17,4 L20,4 C21.1045695,4 22,4.8954305 22,6 L22,8 C22,9.1045695 21.1045695,10 20,10 L19.9198662,10 L19,21 C19,22.1045695 18.1045695,23 17,23 L7,23 C5.8954305,23 5,22.1045695 5.00345424,21.0830455 L4.07986712,10 L4,10 C2.8954305,10 2,9.1045695 2,8 L2,6 C2,4.8954305 2.8954305,4 4,4 L7,4 Z M7,6 L4,6 L4,8 L20,8 L20,6 L17,6 L7,6 Z M6.08648886,10 L7,21 L17,21 L17.0034542,20.9169545 L17.9132005,10 L6.08648886,10 Z M15,4 L15,3 L9,3 L9,4 L15,4 Z"
+								/>
+							</svg>
+						</button>
+					</div>
+				</div>
 
-          <div class="todo-header__buttons">
-            <button class="button button--add" id="addBtn">
-              <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewbox="0 0 24 24" fill="none" stroke="#207934" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><line x1="12" y1="5" x2="12" y2="19"></line><line x1="5" y1="12" x2="19" y2="12"></line></svg>
-            </button>
+				<div class="todo__create-form">
+					<input
+						class="create-form__input input--name"
+						type="text"
+						id="inputName"
+						placeholder="Task Name *"
+					/>
 
-            <button class="button button--clear-all" id="clearAllBtn">
-              <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewbox="0 0 24 24">
-                <path fill-rule="evenodd" stroke-width="0" fill="#792020" d="M7,4 L7,3 C7,1.8954305 7.8954305,1 9,1 L15,1 C16.1045695,1 17,1.8954305 17,3 L17,4 L20,4 C21.1045695,4 22,4.8954305 22,6 L22,8 C22,9.1045695 21.1045695,10 20,10 L19.9198662,10 L19,21 C19,22.1045695 18.1045695,23 17,23 L7,23 C5.8954305,23 5,22.1045695 5.00345424,21.0830455 L4.07986712,10 L4,10 C2.8954305,10 2,9.1045695 2,8 L2,6 C2,4.8954305 2.8954305,4 4,4 L7,4 Z M7,6 L4,6 L4,8 L20,8 L20,6 L17,6 L7,6 Z M6.08648886,10 L7,21 L17,21 L17.0034542,20.9169545 L17.9132005,10 L6.08648886,10 Z M15,4 L15,3 L9,3 L9,4 L15,4 Z"/>
-              </svg>
-            </button>
-          </div>
-        </div>
+					<input
+						class="create-form__input input--description"
+						type="text"
+						id="inputDescription"
+						placeholder="Description"
+					/>
 
-        <div class="todo__create-form">
+					<input
+						class="create-form__input input--date"
+						type="date"
+						id="inputDate"
+					/>
 
-          <input class="create-form__input input--name" type="text" id="inputName" placeholder="Task Name *">
+					<input
+						class="create-form__input input--time"
+						type="time"
+						id="inputTime"
+					/>
 
-          <input class="create-form__input input--description" type="text" id="inputDescription" placeholder="Description">
+					<div class="create-form__buttons">
+						<button class="button button--cancel" id="cancelBtn">
+							<svg
+								version="1.1"
+								xmlns="http://www.w3.org/2000/svg"
+								xmlns:xlink="http://www.w3.org/1999/xlink"
+								x="0px"
+								y="0px"
+								width="22px"
+								height="22px"
+								fill="#792020"
+								viewbox="0 0 92 92"
+								enable-background="new 0 0 92 92"
+								xml:space="preserve"
+							>
+								<path
+									id="XMLID_546_"
+									d="M84,46c0,2.2-1.8,4-4,4H21.6l18.1,18.2c1.6,1.6,1.6,4.1,0,5.7C39,74.6,38,75,36.9,75c-1,0-2.1-0.4-2.8-1.2
+                l-24.9-25c-1.6-1.6-1.6-4.1,0-5.6l24.9-25c1.6-1.6,4.1-1.6,5.7,0c1.6,1.6,1.6,4.1,0,5.7L21.6,42H80C82.2,42,84,43.8,84,46z"
+								/>
+							</svg>
+						</button>
 
-          <input class="create-form__input input--datetime" type="datetime-local" id="inputDatetime" placeholder="Date & Time">
-
-          <div class="create-form__buttons">
-            <button class="button button--cancel" id="cancelBtn">
-              <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-                width="22px" height="22px" fill="#792020" viewbox="0 0 92 92" enable-background="new 0 0 92 92" xml:space="preserve">
-              <path id="XMLID_546_" d="M84,46c0,2.2-1.8,4-4,4H21.6l18.1,18.2c1.6,1.6,1.6,4.1,0,5.7C39,74.6,38,75,36.9,75c-1,0-2.1-0.4-2.8-1.2
-                l-24.9-25c-1.6-1.6-1.6-4.1,0-5.6l24.9-25c1.6-1.6,4.1-1.6,5.7,0c1.6,1.6,1.6,4.1,0,5.7L21.6,42H80C82.2,42,84,43.8,84,46z"/>
-              </svg>
-            </button>
-
-            <!-- <input type="color" name="" id=""> -->
-
-            <button class="button button--enter" id="enterBtn">
-              <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-                width="22px" height="22px" viewbox="0 0 92 92" enable-background="new 0 0 92 92" xml:space="preserve">
-              <path id="XMLID_512_" fill="#207934" d="M82.8,48.8l-24.9,25c-0.8,0.8-1.8,1.2-2.8,1.2c-1,0-2-0.4-2.8-1.2c-1.6-1.6-1.6-4.1,0-5.7L70.4,50H12
+						<button class="button button--enter" id="enterBtn">
+							<svg
+								version="1.1"
+								xmlns="http://www.w3.org/2000/svg"
+								xmlns:xlink="http://www.w3.org/1999/xlink"
+								x="0px"
+								y="0px"
+								width="22px"
+								height="22px"
+								viewbox="0 0 92 92"
+								enable-background="new 0 0 92 92"
+								xml:space="preserve"
+							>
+								<path
+									id="XMLID_512_"
+									fill="#207934"
+									d="M82.8,48.8l-24.9,25c-0.8,0.8-1.8,1.2-2.8,1.2c-1,0-2-0.4-2.8-1.2c-1.6-1.6-1.6-4.1,0-5.7L70.4,50H12
                 c-2.2,0-4-1.8-4-4c0-2.2,1.8-4,4-4h58.4L52.2,23.8c-1.6-1.6-1.6-4.1,0-5.7c1.6-1.6,4.1-1.6,5.7,0l24.9,25
-                C84.4,44.7,84.4,47.3,82.8,48.8z"/>
-              </svg>
-            </button>
-          </div>
-        </div>
+                C84.4,44.7,84.4,47.3,82.8,48.8z"
+								/>
+							</svg>
+						</button>
+					</div>
+				</div>
 
-        <ul class="todo__list"></ul>
-      </div>
+				<ul class="todo__list"></ul>
+			</div>
+		</main>
 
-    </main>
-
-    <script src="script.js"></script>
-  </body>
+		<script src="script.js"></script>
+	</body>
 </html>
