--- a/index.html
+++ b/index.html
@@ -129,14 +129,16 @@
 				<ul class="todo__list"></ul>
 
 				<div class="modal">
-          <div class="modal__wrapper">
-            <div class="modal__content">
-              <span>Are you sure you want to delete <b>all the tasks?</b></span>
-              <button class="button button--modal-yes" id="modalYesBtn">Yes</button>
-              <button class="button button--modal-cancel" id="modalCancelBtn">Cancel</button>
-            </div>
-          </div>
-        </div>
+					<div class="modal__content">
+						<span>Are you sure you want to delete <b>all the tasks?</b></span>
+						<button class="button button--modal-yes" id="modalYesBtn">
+							Yes
+						</button>
+						<button class="button button--modal-cancel" id="modalCancelBtn">
+							Cancel
+						</button>
+					</div>
+				</div>
 			</div>
 		</main>
 
