add new class TaskData, add counters of tasks

--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
 								xmlns:xlink="http://www.w3.org/1999/xlink"
 								x="0px"
 								y="0px"
-								width="22px"
-								height="22px"
+								width="18px"
+								height="18px"
 								fill="#792020"
 								viewbox="0 0 92 92"
 								enable-background="new 0 0 92 92"
@@ -99,17 +99,19 @@
                 l-24.9-25c-1.6-1.6-1.6-4.1,0-5.6l24.9-25c1.6-1.6,4.1-1.6,5.7,0c1.6,1.6,1.6,4.1,0,5.7L21.6,42H80C82.2,42,84,43.8,84,46z"
 								/>
 							</svg>
+              Cancel
 						</button>
 
 						<button class="button button--enter" id="enterBtn">
+              Enter
 							<svg
 								version="1.1"
 								xmlns="http://www.w3.org/2000/svg"
 								xmlns:xlink="http://www.w3.org/1999/xlink"
 								x="0px"
 								y="0px"
-								width="22px"
-								height="22px"
+								width="18px"
+								height="18px"
 								viewbox="0 0 92 92"
 								enable-background="new 0 0 92 92"
 								xml:space="preserve"
@@ -125,6 +127,16 @@
 						</button>
 					</div>
 				</div>
+
+        <div class="todo__statistics">
+          <span class="statistics__total">
+            Total: <span id="total"></span>
+          </span>
+          <!-- <span class="statistics__important" id="important">Important:</span> -->
+          <span class="statistics__completed">
+            Сompleted: <span id="completed"></span>
+          </span>
+        </div>
 
 				<ul class="todo__list"></ul>
 
